Ingress/Pomerium/Secrets/ForwardAuth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: pomerium-auth
spec:
  forwardAuth:
    address: https://k0s-dc1-pomerium-core-proxy-core-prod.service.dc1.kjdev:443
    tls:
      insecureSkipVerify: true
    trustForwardHeader: true
