Ingress/Pomerium/Secrets/AuthIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: pomerium-authenticate-core
spec:
  ingressClassName: traefik-core
  rules:
  - host: authenticate.int.mylogin.space
    http:
      paths:
      - backend:
          service:
            name: pomerium-core-authenticate
            port:
              name: https
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - '*.int.mylogin.space'
      secretName: myloginspace-int-default-certificates
