Ingress/Pomerium/Secrets/Budibase.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: kjdev-cluster
    external-dns.alpha.kubernetes.io/target: k0s-dc1.resolvemy.host.
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  labels:
    wan-mode: 'public'
    lan-mode: 'private'
  name: budibase-budibase
  namespace: budibase
spec:
  ingressClassName: traefik-core
  rules:
    - host: budibase.int.mylogin.space
      http:
        paths:
          - backend:
              service:
                name: proxy-service
                port:
                  number: 10000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - '*.int.mylogin.space'
      secretName: myloginspace-int-default-certificates
