Ingress/Pomerium/Secrets/ControlCenter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: kjdev-cluster
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    traefik.frontend.passHostHeader: 'true'
  name: legacy-controlcenter-core
spec:
  ingressClassName: traefik-core
  rules:
    - host: controlcenter.house
      http:
        paths:
          - path: /auth/token
            pathType: Prefix
            backend:
              service:
                name: legacy-controlcenter
                port:
                  number: 8123

          - path: /api/google_assistant
            pathType: Prefix
            backend:
              service:
                name: legacy-controlcenter
                port:
                  number: 8123

          - path: /api/webhook
            pathType: Prefix
            backend:
              service:
                name: legacy-controlcenter
                port:
                  number: 8123

          - path: /
            pathType: Prefix
            backend:
              service:
                name: pomerium-core-proxy
                port:
                  number: 443

  tls:
    - hosts:
        - 'controlcenter.house'
      secretName: controlcenterhouse-default-certificates
