Ingress/Pomerium/Secrets/KubernetesIngresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    wan-mode: 'public'
    lan-mode: 'private'
  annotations:
    cert-manager.io/cluster-issuer: kjdev-cluster
    external-dns.alpha.kubernetes.io/target: k0s-dc1.resolvemy.host.
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  name: pomerium-k8s-ingress
spec:
  ingressClassName: traefik-core
  rules:
    - host: test-k8s.int.mylogin.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pomerium-core-proxy
                port:
                  number: 443

    - host: kubernetes.int.mylogin.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pomerium-core-proxy
                port:
                  number: 443

  tls:
    - hosts:
        - '*.int.mylogin.space'
      secretName: myloginspace-int-default-certificates
