Ingress/Pomerium/Secrets/LegacyControlCenter.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: kjdev-cluster
    ingress.pomerium.io/allowed_idp_claims: '{"groups": ["Home Users", "Network"]}'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
    ingress.pomerium.io/pass_identity_headers: 'true'
    ingress.pomerium.io/allow_websockets: 'true'
    traefik.ingress.kubernetes.io/router.middlewares: core-prod-pomerium-auth@kubernetescrd
    traefik.frontend.passHostHeader: 'true'
  name: legacy-controlcenter-core
spec:
  ingressClassName: traefik-core
  rules:
    - host: controlcenter.house
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: legacy-controlcenter
                port:
                  number: 8123

  tls:
    - hosts:
        - 'controlcenter.house'
      secretName: controlcenterhouse-default-certificates
