Ingress/Pomerium/Secrets/NextCloud.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    wan-mode: 'public'
    lan-mode: 'private'
  annotations:
    cert-manager.io/cluster-issuer: kjdev-cluster
    external-dns.alpha.kubernetes.io/target: k0s-dc1.resolvemy.host.
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  name: legacy-nextcloud
spec:
  ingressClassName: traefik-core
  rules:
    - host: nextcloud.kristianjones.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: legacy-nextcloud
                port:
                  name: http

  tls:
    - hosts:
        - '*.kristianjones.dev'
      secretName: kristianjonesdev-default-certificates
