Ingress/Pomerium/Secrets/Registry.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    wan-mode: 'public'
    lan-mode: 'private'
  annotations:
    cert-manager.io/cluster-issuer: kjdev-cluster
    external-dns.alpha.kubernetes.io/target: k0s-dc1.resolvemy.host.
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  name: harbor-registry-ingress
spec:
  ingressClassName: traefik-core
  rules:
    - host: registry.writemy.codes
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: harbor-prod-portal
                port:
                  number: 80

  tls:
    - hosts:
        - '*.writemy.codes'
      secretName: writemycodes-default-certificates
