Ingress/Pomerium/Secrets/TestRoute.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: kjdev-cluster
    external-dns.alpha.kubernetes.io/target: k0s-dc1.resolvemy.host.
    ingress.pomerium.io/allowed_idp_claims: '{"groups": ["Server", "Network"]}'
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: core-prod-pomerium-auth@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: pomerium-forwardauth-test
spec:
  ingressClassName: traefik-core
  rules:
    - host: awx2.int.mylogin.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: awx
                port:
                  number: 8080

  tls:
    - hosts:
        - '*.int.mylogin.space'
      secretName: myloginspace-int-default-certificates
