Ingress/Pomerium/Secrets/Unifi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: kjdev-cluster
    external-dns.alpha.kubernetes.io/target: k0s-dc1.resolvemy.host.
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  name: unifi-sso
spec:
  ingressClassName: traefik-core
  rules:
    - host: unifi.ipaddr.network
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: unifi-ingress
                port:
                  number: 8443

  tls:
    - hosts:
        - '*.ipaddr.network'
      secretName: ipaddrnetwork-default-certificates
